--- a/templates/predict.html
+++ b/templates/predict.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>GSOC 2021 caMicroscope</title>
+        <title>Heart Failure Prediction</title>
         <meta http-equiv='cache-control' content='no-cache'>
         <meta http-equiv='expires' content='0'>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
