--- a/templates/predict.html
+++ b/templates/predict.html
@@ -24,7 +24,7 @@
           </div>
     </body> 
     <footer style="text-align: center; margin-top: 150px;">
-        <p>&copy; Designed and Developed by People a KMIT</p>
+        <p>&copy; Designed and Developed by People at KMIT</p>
     </footer>
     
 </html>
